Fixed nav animation, scrollbar

--- a/styles.css
+++ b/styles.css
@@ -500,6 +500,10 @@ input[type="submit"]:hover{
 /* End footer  */
 
 /* Start scrollbar */
+body {
+    overflow: visible;
+}
+
 body::-webkit-scrollbar {
     width: 10px;
     height: 10px;
